doc: update invitations api docs
